src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/MissingAsyncValue/InvalidMissingAsyncValue.php
<?php

namespace Invalid\MissingAsyncValue;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidMissingAsyncValue extends PluginBundle
{
}